# BroadcASCII

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
include/CLI/: CLI.hpp
include/img/: ColoredAscii.hpp  Converter.hpp  ImgConverter.hpp  RGBConverter.hpp
include/test/: testcases.hpp
include/vid/: VidPlayer.hpp  VideoGenerator.hpp  audio.hpp
src/: main.cpp  test.cpp  test_main.cpp
src/CLI/: CLI.cpp
src/img/: Converter.cpp  ImageConverter.cpp  ImgConverter.cpp  RGBConverter.cpp
src/test/: testcases.cpp
src/vid/: VidPlayer.cpp  VideoGenerator.cpp  audio.cpp
